--- a/app.yaml
+++ b/app.yaml
@@ -1,17 +1,20 @@
-application: console
+application: test
 version: 1
 runtime: python27
 api_version: 1
-threadsafe: yes
+threadsafe: true
 
 handlers:
-- url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
+- url: /stylesheets
+  static_dir: stylesheets
 
-- url: .*
-  script: main.app
+- url: /.*
+  script: main.application
+
 
 libraries:
 - name: webapp2
-  version: "2.5.2"
+  version: latest
+- name: jinja2
+  version: latest
+
